FIX: nix cell timer :pencil2:

--- a/tokenization/Training data to csv.ipynb
+++ b/tokenization/Training data to csv.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,13 +36,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Writing to csv\n",
+    "# Write the training data to csv\n",
     "Here we'll write this training data to a single csv, with the headers `target` and `text`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,19 +57,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pushing to S3\n",
+    "# Push training data to S3\n",
     "You'll need to have installed the awscli prior to this step and have configured it to use the Key ID and Secret Access Key of your AWS account. You can do that with the `aws configure` as documented [here](https://docs.aws.amazon.com/cli/latest/userguide/cli-chap-configure.html#cli-quick-configuration)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done writing to s3n://srt-sagemaker/training/srt_train.csv\n"
+     ]
+    }
+   ],
    "source": [
     "import boto3\n",
     "\n",
-    "%%time\n",
     "s3 = boto3.resource('s3')\n",
     "region = boto3.Session().region_name\n",
     "bucket = 'srt-sagemaker' \n",
@@ -82,13 +89,20 @@
     "url = f's3n://{bucket}/{key}'\n",
     "print(f'Done writing to {url}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tokenization",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "tokenization"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -100,7 +114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
