--- a/tokenization/Training data to csv.ipynb
+++ b/tokenization/Training data to csv.ipynb
@@ -5,7 +5,11 @@
    "metadata": {},
    "source": [
     "# Read in the labeled documents\n",
-    "The label is in the file name. Although there are three lables (red, yellow and green), we're combining red and yellow as noncompliant ($0$) and treating green as compliant ($1$). This makes a binary classification challenge."
+    "This notebook assumes:\n",
+    " - You've got all of the labeled solicitaton documents within a directory named `labeled_fbo_docs`\n",
+    " - You can use the awscli to push a csv up to an S3 bucket named (our is named `srt-sm`).\n",
+    "\n",
+    "Below, we'll read in each document and extract the text along with the label (the label is in the file name). Although there are three lables (red, yellow and green), we're combining red and yellow as noncompliant ($0$) and treating green as compliant ($1$). This makes our binary classification challenge."
    ]
   },
   {
@@ -63,14 +67,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done writing to s3n://srt-sagemaker/training/srt_train.csv\n"
+      "Done writing to s3n://srt-sm/training/srt_train.csv\n"
      ]
     }
    ],
@@ -79,7 +83,7 @@
     "\n",
     "s3 = boto3.resource('s3')\n",
     "region = boto3.Session().region_name\n",
-    "bucket = 'srt-sagemaker' \n",
+    "bucket = 'srt-sm' \n",
     "prefix = 'training' # Used as part of the path in the bucket where we'll store train and test data\n",
     "bucket_path = f'https://s3-{region}.amazonaws.com/{bucket}'\n",
     "\n",
@@ -89,20 +93,13 @@
     "url = f's3n://{bucket}/{key}'\n",
     "print(f'Done writing to {url}')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "tokenization",
    "language": "python",
-   "name": "python3"
+   "name": "tokenization"
   },
   "language_info": {
    "codemirror_mode": {
@@ -114,7 +111,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
