FIX: specify s3 bucket for training data :pencil2:

--- a/srt.ipynb
+++ b/srt.ipynb
@@ -14,8 +14,8 @@
    "outputs": [],
    "source": [
     "# S3 prefix\n",
-    "s3_bucket = '< ENTER BUCKET NAME HERE >'\n",
-    "prefix = 'Scikit-LinearLearner-pipeline-abalone-example'\n",
+    "s3_bucket = 'srt-sm'\n",
+    "prefix = 'training'\n",
     "\n",
     "import sagemaker\n",
     "from sagemaker import get_execution_role\n",
@@ -54,6 +54,17 @@
     "                               train_instance_type=\"ml.c4.xlarge\",\n",
     "                               sagemaker_session=sagemaker_session)\n",
     "\n",
+    "\n",
+    "train_input = f's3://{s3_bucket}/{prefix}/srt_train.csv'\n",
+    "print(train_input)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "sklearn_preprocessor.fit({'train': train_input})"
    ]
   },
@@ -62,7 +73,7 @@
    "metadata": {},
    "source": [
     "## Batch transform the training data \n",
-    "With the proprocessor fitted, we can preprocess our training data. We'll use **batch transform**, storing the output right back into s3."
+    "With the preprocessor fitted, we can now preprocess our training data. We'll use **batch transform**, storing the output right back into s3."
    ]
   },
   {
