CLN: move featurizer pipeline

--- a/srt.ipynb
+++ b/srt.ipynb
@@ -47,7 +47,7 @@
    "source": [
     "from sagemaker.sklearn.estimator import SKLearn\n",
     "\n",
-    "script_path = 'linear_learner/sklearn_featurizer.py'\n",
+    "script_path = 'sklearn_featurizer.py'\n",
     "\n",
     "sklearn_preprocessor = SKLearn(entry_point=script_path,\n",
     "                               role=role,\n",
