FIX: use role with jobs :bug:

--- a/srt.ipynb
+++ b/srt.ipynb
@@ -34,9 +34,10 @@
     "To run our Scikit-learn training script on SageMaker, we construct a `sagemaker.sklearn.estimator.sklearn` estimator, which accepts several constructor arguments:\n",
     "\n",
     " - **entry_point**: The path to the Python script SageMaker runs for training and prediction.\n",
-    "role: Role ARN\n",
+    " - **role**: Role ARN\n",
     " - **train_instance_type (optional)**: The type of SageMaker instances for training. Note: Because Scikit-learn does not natively support GPU training, Sagemaker Scikit-learn does not currently support training on GPU instance types.\n",
-    " - **sagemaker_session (optional)**: The session used to train on Sagemaker."
+    " - **sagemaker_session (optional)**: The session used to train on Sagemaker.\n",
+    " "
    ]
   },
   {
@@ -86,7 +87,8 @@
     "transformer = sklearn_preprocessor.transformer(instance_count=1,\n",
     "                                               instance_type='ml.m4.xlarge',\n",
     "                                               assemble_with='Line',\n",
-    "                                               accept='text/csv')"
+    "                                               accept='text/csv',\n",
+    "                                               role = role)"
    ]
   },
   {
@@ -99,7 +101,8 @@
     "transformer.transform(train_input, content_type='text/csv')\n",
     "print(f'Waiting for transform job: {transformer.latest_transform_job.job_name}')\n",
     "transformer.wait()\n",
-    "preprocessed_train = transformer.output_path"
+    "preprocessed_train = transformer.output_path\n",
+    "print(f\"Transform job done. Outpath:  {preprocessed_train}\")"
    ]
   },
   {
@@ -140,7 +143,7 @@
     "                                             output_path=s3_ll_output_location,\n",
     "                                             sagemaker_session=sagemaker_session)\n",
     "\n",
-    "ll_estimator.set_hyperparameters(feature_dim=10, predictor_type='regressor', mini_batch_size=32)\n",
+    "ll_estimator.set_hyperparameters(feature_dim=100, predictor_type='binary_classifier', mini_batch_size=50)\n",
     "\n",
     "ll_train_data = sagemaker.session.s3_input(preprocessed_train, \n",
     "                                           distribution='FullyReplicated',\n",
