--- a/tokenization/Training data to csv.ipynb
+++ b/tokenization/Training data to csv.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,21 +40,94 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Write the training data to csv\n",
-    "Here we'll write this training data to a single csv, with the headers `target` and `text`."
+    "# Split into Training and Testing data\n",
+    "Since our data is imbalanced, we'll use the `stratify` kwarg to split the data in a stratified fashion, using the labels array."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27.33% of the training data is a positive sample\n",
+      "27.14% of the testing data is a positive sample\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "y = [i[0] for i in data]\n",
+    "x = [i[1] for i in data]\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=123, stratify=y)\n",
+    "\n",
+    "n_test_pos_samples = 100 * sum(y_test) / len(y_test)\n",
+    "n_train_pos_samples = 100 * sum(y_train) / len(y_train)\n",
+    "\n",
+    "print(\"{:.2f}% of the training data is a positive sample\".format(n_train_pos_samples))\n",
+    "\n",
+    "print(\"{:.2f}% of the testing data is a positive sample\".format(n_test_pos_samples))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Write the training data to csv\n",
+    "Here we'll write the training and test data to two csvs, using pandas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  target                                               text\n",
+      "0      0  Table of Contents                             ...\n",
+      "1      1  [pic]                                         ...\n",
+      "2      1  SOLICITATION SECTION A - SOLICITATION/CONTRACT...\n",
+      "3      0  STATEMENT OF WORK (SOW)   Title: Accessible Vo...\n",
+      "4      0  |REQUEST FOR QUOTATION             |This RFQ  ...\n",
+      "  target                                               text\n",
+      "0      0  OBJECTIVE    The RRB seeks electronic data sto...\n",
+      "1      0  Checklist and Certification for Minimum Level ...\n",
+      "2      1  Date Issued:  January 6, 2009 Date Due:  Febru...\n",
+      "3      0  Section SF 1449 - CONTINUATION SHEET    |ITEM ...\n",
+      "4      1  Statement of Work                             ...\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "cols = ['target', 'text']\n",
+    "\n",
+    "train_df = pd.DataFrame([y_train, X_train]).transpose()\n",
+    "train_df.columns = cols\n",
+    "print(train_df.head())\n",
+    "test_df = pd.DataFrame([y_test, X_test]).transpose()\n",
+    "test_df.columns = cols\n",
+    "print(test_df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import csv\n",
+    "train_df.to_csv('srt_train.csv', index = False)\n",
     "\n",
-    "with open('srt_train.csv', mode='w') as f:\n",
-    "    csvwriter = csv.writer(f, delimiter=',')\n",
-    "    csvwriter.writerows(data)"
+    "test_df.to_csv('srt_test.csv', index = False)"
    ]
   },
   {
@@ -67,14 +140,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done writing to s3n://srt-sm/training/srt_train.csv\n"
+      "Done writing to s3n://srt-sm/training/srt_train.csv\n",
+      "Done writing to s3n://srt-sm/training/srt_test.csv\n"
      ]
     }
    ],
@@ -84,15 +158,22 @@
     "s3 = boto3.resource('s3')\n",
     "region = boto3.Session().region_name\n",
     "bucket = 'srt-sm' \n",
-    "prefix = 'training' # Used as part of the path in the bucket where we'll store train and test data\n",
+    "prefix = 'training' # Used as part of the path in the bucket where we'll store the train and test data\n",
     "bucket_path = f'https://s3-{region}.amazonaws.com/{bucket}'\n",
     "\n",
-    "upload_file = 'srt_train.csv'\n",
-    "key = f'{prefix}/{upload_file}'\n",
-    "s3.Bucket(bucket).Object(key).upload_file(upload_file)\n",
-    "url = f's3n://{bucket}/{key}'\n",
-    "print(f'Done writing to {url}')"
+    "for f in ['srt_train.csv', 'srt_test.csv']:\n",
+    "    key = f'{prefix}/{f}'\n",
+    "    s3.Bucket(bucket).Object(key).upload_file(f)\n",
+    "    url = f's3n://{bucket}/{key}'\n",
+    "    print(f'Done writing to {url}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
