ENH: ref test data when fitting :sparkles:

--- a/srt.ipynb
+++ b/srt.ipynb
@@ -57,7 +57,7 @@
     "\n",
     "\n",
     "train_input = f's3://{s3_bucket}/{prefix}/srt_train.csv'\n",
-    "print(train_input)"
+    "test_input = f's3://{s3_bucket}/{prefix}/srt_test.csv'"
    ]
   },
   {
@@ -66,7 +66,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sklearn_preprocessor.fit({'train': train_input})"
+    "sklearn_preprocessor.fit({'train': train_input,\n",
+    "                          'test': test_input})"
    ]
   },
   {
