FIX: nix additiona of column names :fire:

--- a/tokenization/Training data to csv.ipynb
+++ b/tokenization/Training data to csv.ipynb
@@ -7,14 +7,15 @@
     "# Read in the labeled documents\n",
     "This notebook assumes:\n",
     " - You've got all of the labeled solicitaton documents within a directory named `labeled_fbo_docs`\n",
-    " - You can use the awscli to push a csv up to an S3 bucket named (our is named `srt-sm`).\n",
+    " - You can use the awscli\n",
+    " - You have already created an S3 bucket (our is named `srt-sm`).\n",
     "\n",
-    "Below, we'll read in each document and extract the text along with the label (the label is in the file name). Although there are three lables (red, yellow and green), we're combining red and yellow as noncompliant ($0$) and treating green as compliant ($1$). This makes our binary classification challenge."
+    "Below, we'll read in each document and extract the text along with the label (the label is in the file name). Although there are three lables (red, yellow and green), we're combining red and yellow as noncompliant ($0$) and treating green as compliant ($1$). This makes a binary classification challenge."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -79,49 +80,45 @@
    "metadata": {},
    "source": [
     "# Write the training data to csv\n",
-    "Here we'll write the training and test data to two csvs, using pandas."
+    "Here we'll write the training and test data to two csvs, using pandas, which will be smart about escaping quotes and all the other weird characters in the text."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  target                                               text\n",
-      "0      0  Table of Contents                             ...\n",
-      "1      1  [pic]                                         ...\n",
-      "2      1  SOLICITATION SECTION A - SOLICITATION/CONTRACT...\n",
-      "3      0  STATEMENT OF WORK (SOW)   Title: Accessible Vo...\n",
-      "4      0  |REQUEST FOR QUOTATION             |This RFQ  ...\n",
-      "  target                                               text\n",
-      "0      0  OBJECTIVE    The RRB seeks electronic data sto...\n",
-      "1      0  Checklist and Certification for Minimum Level ...\n",
-      "2      1  Date Issued:  January 6, 2009 Date Due:  Febru...\n",
-      "3      0  Section SF 1449 - CONTINUATION SHEET    |ITEM ...\n",
-      "4      1  Statement of Work                             ...\n"
+      "   0                                                  1\n",
+      "0  0  Table of Contents                             ...\n",
+      "1  1  [pic]                                         ...\n",
+      "2  1  SOLICITATION SECTION A - SOLICITATION/CONTRACT...\n",
+      "3  0  STATEMENT OF WORK (SOW)   Title: Accessible Vo...\n",
+      "4  0  |REQUEST FOR QUOTATION             |This RFQ  ...\n",
+      "   0                                                  1\n",
+      "0  0  OBJECTIVE    The RRB seeks electronic data sto...\n",
+      "1  0  Checklist and Certification for Minimum Level ...\n",
+      "2  1  Date Issued:  January 6, 2009 Date Due:  Febru...\n",
+      "3  0  Section SF 1449 - CONTINUATION SHEET    |ITEM ...\n",
+      "4  1  Statement of Work                             ...\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "cols = ['target', 'text']\n",
-    "\n",
     "train_df = pd.DataFrame([y_train, X_train]).transpose()\n",
-    "train_df.columns = cols\n",
     "print(train_df.head())\n",
     "test_df = pd.DataFrame([y_test, X_test]).transpose()\n",
-    "test_df.columns = cols\n",
     "print(test_df.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,12 +132,12 @@
    "metadata": {},
    "source": [
     "# Push training data to S3\n",
-    "You'll need to have installed the awscli prior to this step and have configured it to use the Key ID and Secret Access Key of your AWS account. You can do that with the `aws configure` as documented [here](https://docs.aws.amazon.com/cli/latest/userguide/cli-chap-configure.html#cli-quick-configuration)."
+    "You'll need to have installed the awscli prior to this step and have configured it to use the Key ID and Secret Access Key of your AWS account. You can do that with `aws configure` as documented [here](https://docs.aws.amazon.com/cli/latest/userguide/cli-chap-configure.html#cli-quick-configuration)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
