--- a/tokenization/Pipeline Test.ipynb
+++ b/tokenization/Pipeline Test.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -128,63 +128,29 @@
      "text": [
       "Fitting preprocessor on training data...\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "ColumnTransformer(n_jobs=None, remainder='drop', sparse_threshold=0.3,\n",
-       "         transformer_weights=None,\n",
-       "         transformers=[('txt', Pipeline(memory=None,\n",
-       "     steps=[('cleaner', TextPreprocessor()), ('vectorizer', TfidfVectorizer(analyzer=<method 'split' of 'str' objects>, binary=False,\n",
-       "        decode_error='strict', dtype=<class 'numpy.float64'>,\n",
-       "        encoding='utf-8', input='content', lowercase=True, max_df=1.0,\n",
-       "        max_features=None, min_df=1, n...runcatedSVD(algorithm='randomized', n_components=100, n_iter=2,\n",
-       "       random_state=None, tol=0.0))]), ['text'])])"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(\"Fitting preprocessor on training data...\")\n",
-    "preprocessor.fit(train_df)"
+    "print(\"Fitting preprocessor on training data and transforming\")\n",
+    "X_train = preprocessor.fit_transform(train_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting preprocessor on training data...\n"
+      "Fitting preprocessor on training data and transforming\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "ColumnTransformer(n_jobs=None, remainder='drop', sparse_threshold=0.3,\n",
-       "         transformer_weights=None,\n",
-       "         transformers=[('txt', Pipeline(memory=None,\n",
-       "     steps=[('cleaner', TextPreprocessor()), ('vectorizer', TfidfVectorizer(analyzer=<method 'split' of 'str' objects>, binary=False,\n",
-       "        decode_error='strict', dtype=<class 'numpy.float64'>,\n",
-       "        encoding='utf-8', input='content', lowercase=True, max_df=1.0,\n",
-       "        max_features=None, min_df=1, n...runcatedSVD(algorithm='randomized', n_components=100, n_iter=2,\n",
-       "       random_state=None, tol=0.0))]), ['text'])])"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(\"Fitting preprocessor on training data...\")\n",
-    "preprocessor.fit(test_df)"
+    "print(\"Fitting preprocessor on training data and transforming\")\n",
+    "X_test = preprocessor.fit_transform(test_df)"
    ]
   },
   {
