FIX: use single s3 bucket

--- a/tokenization/Training data to csv.ipynb
+++ b/tokenization/Training data to csv.ipynb
@@ -10,31 +10,37 @@
     " - You can use the awscli\n",
     " - You have already created an S3 bucket (our is named `srt-sm`).\n",
     "\n",
-    "Below, we'll read in each document and extract the text along with the label (the label is in the file name). Although there are three lables (red, yellow and green), we're combining red and yellow as noncompliant ($0$) and treating green as compliant ($1$). This makes a binary classification challenge."
+    "Below, we'll read in each document and extract the text along with the label (the label is in the file name). Although there are three lables (red, yellow and green), we're combining red and yellow as noncompliant ($0$) and treating green as compliant ($1$). This makes a binary classification challenge.\n",
+    "\n",
+    "\n",
+    ">And since we're only piloting SageMaker, will reduce our total training dataset size down to just 50 documents."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "\n",
     "data = []\n",
-    "for file in os.listdir('labeled_fbo_docs'):\n",
-    "    if file.startswith('GREEN'):\n",
-    "        target = 1\n",
-    "    elif file.startswith('RED') or file.startswith('YELLOW'):\n",
-    "        target = 0\n",
+    "for i, file in enumerate(os.listdir('labeled_fbo_docs')):\n",
+    "    if i < 50:\n",
+    "        if file.startswith('GREEN'):\n",
+    "            target = 1\n",
+    "        elif file.startswith('RED') or file.startswith('YELLOW'):\n",
+    "            target = 0\n",
+    "        else:\n",
+    "            raise Exception(f\"A file isn't prepended with the target:  {file}\")\n",
+    "\n",
+    "        file_path = os.path.join(os.getcwd(), 'labeled_fbo_docs', file)\n",
+    "        with open(file_path, 'r', errors = 'ignore') as f:\n",
+    "            #do some newline replacing\n",
+    "            text = f.read().replace(\"\\n\", ' ').strip()\n",
+    "        data.append([target, text])\n",
     "    else:\n",
-    "        raise Exception(f\"A file isn't prepended with the target:  {file}\")\n",
-    "    \n",
-    "    file_path = os.path.join(os.getcwd(), 'labeled_fbo_docs', file)\n",
-    "    with open(file_path, 'r', errors = 'ignore') as f:\n",
-    "        #do some newline replacing\n",
-    "        text = f.read().replace(\"\\n\", ' ').strip()\n",
-    "    data.append([target, text])"
+    "        break"
    ]
   },
   {
@@ -47,15 +53,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "27.33% of the training data is a positive sample\n",
-      "27.14% of the testing data is a positive sample\n"
+      "25.00% of the training data is a positive sample\n",
+      "20.00% of the testing data is a positive sample\n"
      ]
     }
    ],
@@ -85,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -93,17 +99,17 @@
      "output_type": "stream",
      "text": [
       "   0                                                  1\n",
-      "0  0  Table of Contents                             ...\n",
-      "1  1  [pic]                                         ...\n",
-      "2  1  SOLICITATION SECTION A - SOLICITATION/CONTRACT...\n",
-      "3  0  STATEMENT OF WORK (SOW)   Title: Accessible Vo...\n",
-      "4  0  |REQUEST FOR QUOTATION             |This RFQ  ...\n",
+      "0  1  <!DOCTYPE html PUBLIC \"-//W3C//DTD XHTML 1.0 T...\n",
+      "1  1  <!DOCTYPE html PUBLIC \"-//W3C//DTD XHTML 1.0 T...\n",
+      "2  0  National Institutes of Health Clinical Center ...\n",
+      "3  0  <!DOCTYPE html PUBLIC \"-//W3C//DTD XHTML 1.0 T...\n",
+      "4  1  <!DOCTYPE html PUBLIC \"-//W3C//DTD XHTML 1.0 T...\n",
       "   0                                                  1\n",
-      "0  0  OBJECTIVE    The RRB seeks electronic data sto...\n",
-      "1  0  Checklist and Certification for Minimum Level ...\n",
-      "2  1  Date Issued:  January 6, 2009 Date Due:  Febru...\n",
-      "3  0  Section SF 1449 - CONTINUATION SHEET    |ITEM ...\n",
-      "4  1  Statement of Work                             ...\n"
+      "0  0  This is a combined synopsis/solicitation for c...\n",
+      "1  0  General Information:   Document Type:         ...\n",
+      "2  1  Attachment 1                         Glossary ...\n",
+      "3  0  STATEMENT OF WORK     (SOW)    FOR    317 RCS/...\n",
+      "4  0  |SOLICITATION, OFFER AND AWARD                ...\n"
      ]
     }
    ],
@@ -118,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
