--- a/srt.ipynb
+++ b/srt.ipynb
@@ -37,6 +37,7 @@
     " - **role**: Role ARN\n",
     " - **train_instance_type (optional)**: The type of SageMaker instances for training. Note: Because Scikit-learn does not natively support GPU training, Sagemaker Scikit-learn does not currently support training on GPU instance types.\n",
     " - **sagemaker_session (optional)**: The session used to train on Sagemaker.\n",
+    " - **output_path (optional)**: s3 location where you want the training result (model artifacts and optional output files) saved. If not specified, results are stored to a default bucket. If the bucket with the specific name does not exist, the estimator creates the bucket during the fit() method execution.\n",
     " "
    ]
   },
@@ -46,14 +47,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from time import gmtime, strftime\n",
     "from sagemaker.sklearn.estimator import SKLearn\n",
     "\n",
     "script_path = 'sklearn_featurizer.py'\n",
     "\n",
+    "output_timestamp_prefix = strftime(\"%Y-%m-%d\", gmtime())\n",
+    "\n",
+    "preprocessor_output_prefix = f'sklearn-preprocessor-{output_timestamp_prefix}'\n",
+    "preprocessor_output_path = f's3://{s3_bucket}/{prefix}/{preprocessor_output_prefix}/'\n",
+    "\n",
     "sklearn_preprocessor = SKLearn(entry_point=script_path,\n",
     "                               role=role,\n",
     "                               train_instance_type=\"ml.c4.xlarge\",\n",
-    "                               sagemaker_session=sagemaker_session)\n",
+    "                               sagemaker_session=sagemaker_session,\n",
+    "                               output_path=preprocessor_output_path)\n",
     "\n",
     "\n",
     "train_input = f's3://{s3_bucket}/{prefix}/srt_train.csv'\n",
@@ -84,12 +92,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "transformer_output_prefix = f'sklearn-transformer-{output_timestamp_prefix}'\n",
+    "transformer_output_path = f's3://{s3_bucket}/{prefix}/{preprocessor_output_prefix}/'\n",
+    "\n",
     "# Define a SKLearn Transformer from the trained SKLearn Estimator\n",
     "transformer = sklearn_preprocessor.transformer(instance_count=1,\n",
     "                                               instance_type='ml.m4.xlarge',\n",
     "                                               assemble_with='Line',\n",
     "                                               accept='text/csv',\n",
-    "                                               role = role)"
+    "                                               role = role,\n",
+    "                                               output_path = transformer_output_path)"
    ]
   },
   {
