DOC: show how to read in csv :pencil:

--- a/tokenization/Training data to csv.ipynb
+++ b/tokenization/Training data to csv.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -86,45 +86,25 @@
    "metadata": {},
    "source": [
     "# Write the training data to csv\n",
-    "Here we'll write the training and test data to two csvs, using pandas, which will be smart about escaping quotes and all the other weird characters in the text."
+    "Here we'll write the training and test data to two csvs, using pandas."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   0                                                  1\n",
-      "0  1  <!DOCTYPE html PUBLIC \"-//W3C//DTD XHTML 1.0 T...\n",
-      "1  1  <!DOCTYPE html PUBLIC \"-//W3C//DTD XHTML 1.0 T...\n",
-      "2  0  National Institutes of Health Clinical Center ...\n",
-      "3  0  <!DOCTYPE html PUBLIC \"-//W3C//DTD XHTML 1.0 T...\n",
-      "4  1  <!DOCTYPE html PUBLIC \"-//W3C//DTD XHTML 1.0 T...\n",
-      "   0                                                  1\n",
-      "0  0  This is a combined synopsis/solicitation for c...\n",
-      "1  0  General Information:   Document Type:         ...\n",
-      "2  1  Attachment 1                         Glossary ...\n",
-      "3  0  STATEMENT OF WORK     (SOW)    FOR    317 RCS/...\n",
-      "4  0  |SOLICITATION, OFFER AND AWARD                ...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
     "train_df = pd.DataFrame([y_train, X_train]).transpose()\n",
-    "print(train_df.head())\n",
-    "test_df = pd.DataFrame([y_test, X_test]).transpose()\n",
-    "print(test_df.head())"
+    "\n",
+    "test_df = pd.DataFrame([y_test, X_test]).transpose()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,21 +117,112 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Here we'll read in the files we wrote just to make sure we do it correctly in our sagemaker script"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>target</th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>This is a combined synopsis/solicitation for c...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>General Information:   Document Type:         ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Attachment 1                         Glossary ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>STATEMENT OF WORK     (SOW)    FOR    317 RCS/...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>|SOLICITATION, OFFER AND AWARD                ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   target                                               text\n",
+       "0     0.0  This is a combined synopsis/solicitation for c...\n",
+       "1     0.0  General Information:   Document Type:         ...\n",
+       "2     1.0  Attachment 1                         Glossary ...\n",
+       "3     0.0  STATEMENT OF WORK     (SOW)    FOR    317 RCS/...\n",
+       "4     0.0  |SOLICITATION, OFFER AND AWARD                ..."
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "test_df_check = pd.read_csv('srt_test.csv')\n",
+    "test_df_check.columns = ['target', 'text']\n",
+    "test_df_check = test_df_check.astype({'target': np.float64, 'text': str})\n",
+    "\n",
+    "test_df_check.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Push training data to S3\n",
     "You'll need to have installed the awscli prior to this step and have configured it to use the Key ID and Secret Access Key of your AWS account. You can do that with `aws configure` as documented [here](https://docs.aws.amazon.com/cli/latest/userguide/cli-chap-configure.html#cli-quick-configuration)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done writing to s3n://srt-sm/training/srt_train.csv\n",
-      "Done writing to s3n://srt-sm/training/srt_test.csv\n"
+      "Done writing to s3n://srt-sm/Scikit-LinearLearner-pipeline-srt/srt_train.csv\n",
+      "Done writing to s3n://srt-sm/Scikit-LinearLearner-pipeline-srt/srt_test.csv\n"
      ]
     }
    ],
@@ -161,7 +232,7 @@
     "s3 = boto3.resource('s3')\n",
     "region = boto3.Session().region_name\n",
     "bucket = 'srt-sm' \n",
-    "prefix = 'training' # Used as part of the path in the bucket where we'll store the train and test data\n",
+    "prefix = 'Scikit-LinearLearner-pipeline-srt'\n",
     "bucket_path = f'https://s3-{region}.amazonaws.com/{bucket}'\n",
     "\n",
     "for f in ['srt_train.csv', 'srt_test.csv']:\n",
