TST: add extra col to train data :alembic:

--- a/tokenization/Pipeline Test.ipynb
+++ b/tokenization/Pipeline Test.ipynb
@@ -10,27 +10,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "train_df = pd.read_csv('srt_train.csv', \n",
-    "                       header=None,\n",
-    "                       names=['target', 'text'],\n",
-    "                       dtype={'target': np.float64, 'text': str})  \n",
+    "train_df = pd.read_csv('srt_train.csv')\n",
+    "train_df.columns = ['target', 'text', 'zero']\n",
+    "train_df = train_df.astype({'target': np.float64, 'text': str, 'zero': np.float64})  \n",
     "\n",
-    "test_df = pd.read_csv('srt_test.csv', \n",
-    "                       header=None,\n",
-    "                       names=['target', 'text'],\n",
-    "                       dtype={'target': np.float64, 'text': str}) "
+    "test_df = pd.read_csv('srt_test.csv')\n",
+    "test_df.columns = ['target', 'text', 'zero']\n",
+    "test_df = test_df.astype({'target': np.float64, 'text': str, 'zero': np.float64})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {
     "scrolled": false
    },
@@ -126,7 +124,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting preprocessor on training data...\n"
+      "Fitting preprocessor on training data and transforming\n"
      ]
     }
    ],
@@ -137,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -152,13 +150,6 @@
     "print(\"Fitting preprocessor on training data and transforming\")\n",
     "X_test = preprocessor.fit_transform(test_df)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
