--- a/tokenization/Training data to csv.ipynb
+++ b/tokenization/Training data to csv.ipynb
@@ -18,11 +18,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
+    "import random\n",
     "\n",
     "data = []\n",
     "for i, file in enumerate(os.listdir('labeled_fbo_docs')):\n",
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +105,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sagemaker doesn't like input data with a single feature apparently. So we'll add zeros\n",
+    "# see comment here: https://stackoverflow.com/questions/51635902/aws-sagemaker-unable-to-parse-csv\n",
+    "train_df[2] = [0 for i in range(len(train_df))]\n",
+    "test_df[2] = [0 for i in range(len(test_df))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -148,6 +161,7 @@
        "      <th></th>\n",
        "      <th>target</th>\n",
        "      <th>text</th>\n",
+       "      <th>zero</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -155,41 +169,46 @@
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>This is a combined synopsis/solicitation for c...</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>0.0</td>\n",
        "      <td>General Information:   Document Type:         ...</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
        "      <td>1.0</td>\n",
        "      <td>Attachment 1                         Glossary ...</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
        "      <td>0.0</td>\n",
        "      <td>STATEMENT OF WORK     (SOW)    FOR    317 RCS/...</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
        "      <td>0.0</td>\n",
        "      <td>|SOLICITATION, OFFER AND AWARD                ...</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   target                                               text\n",
-       "0     0.0  This is a combined synopsis/solicitation for c...\n",
-       "1     0.0  General Information:   Document Type:         ...\n",
-       "2     1.0  Attachment 1                         Glossary ...\n",
-       "3     0.0  STATEMENT OF WORK     (SOW)    FOR    317 RCS/...\n",
-       "4     0.0  |SOLICITATION, OFFER AND AWARD                ..."
+       "   target                                               text  zero\n",
+       "0     0.0  This is a combined synopsis/solicitation for c...   0.0\n",
+       "1     0.0  General Information:   Document Type:         ...   0.0\n",
+       "2     1.0  Attachment 1                         Glossary ...   0.0\n",
+       "3     0.0  STATEMENT OF WORK     (SOW)    FOR    317 RCS/...   0.0\n",
+       "4     0.0  |SOLICITATION, OFFER AND AWARD                ...   0.0"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,8 +217,8 @@
     "import numpy as np\n",
     "\n",
     "test_df_check = pd.read_csv('srt_test.csv')\n",
-    "test_df_check.columns = ['target', 'text']\n",
-    "test_df_check = test_df_check.astype({'target': np.float64, 'text': str})\n",
+    "test_df_check.columns = ['target', 'text', 'zero']\n",
+    "test_df_check = test_df_check.astype({'target': np.float64, 'text': str, 'zero': np.float64})\n",
     "\n",
     "test_df_check.head()"
    ]
@@ -214,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
