--- a/srt.ipynb
+++ b/srt.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "# S3 prefix\n",
     "s3_bucket = 'srt-sm'\n",
-    "prefix = 'training'\n",
+    "prefix = 'Scikit-LinearLearner-pipeline-srt'\n",
     "\n",
     "import sagemaker\n",
     "from sagemaker import get_execution_role\n",
@@ -34,6 +34,7 @@
     "To run our Scikit-learn training script on SageMaker, we construct a `sagemaker.sklearn.estimator.sklearn` estimator, which accepts several constructor arguments:\n",
     "\n",
     " - **entry_point**: The path to the Python script SageMaker runs for training and prediction.\n",
+    " - **source_dir**: Path (absolute or relative) to a directory with any other training source code dependencies aside from tne entry point file (default: None). Structure within this directory are preserved when training on Amazon SageMaker.\n",
     " - **role**: Role ARN\n",
     " - **train_instance_type (optional)**: The type of SageMaker instances for training. Note: Because Scikit-learn does not natively support GPU training, Sagemaker Scikit-learn does not currently support training on GPU instance types.\n",
     " - **sagemaker_session (optional)**: The session used to train on Sagemaker.\n",
@@ -50,22 +51,18 @@
     "from time import gmtime, strftime\n",
     "from sagemaker.sklearn.estimator import SKLearn\n",
     "\n",
-    "script_path = 'sklearn_featurizer.py'\n",
+    "entry_point = 'sklearn_featureizer.py'\n",
+    "source_dir = 'pipeline'\n",
     "\n",
-    "output_timestamp_prefix = strftime(\"%Y-%m-%d\", gmtime())\n",
-    "\n",
-    "preprocessor_output_prefix = f'sklearn-preprocessor-{output_timestamp_prefix}'\n",
-    "preprocessor_output_path = f's3://{s3_bucket}/{prefix}/{preprocessor_output_prefix}/'\n",
-    "\n",
-    "sklearn_preprocessor = SKLearn(entry_point=script_path,\n",
+    "sklearn_preprocessor = SKLearn(source_dir=source_dir,\n",
+    "                               entry_point=entry_point,\n",
     "                               role=role,\n",
     "                               train_instance_type=\"ml.c4.xlarge\",\n",
-    "                               sagemaker_session=sagemaker_session,\n",
-    "                               output_path=preprocessor_output_path)\n",
+    "                               sagemaker_session=sagemaker_session)\n",
+    "                               #output_path=preprocessor_output_path)\n",
     "\n",
     "\n",
-    "train_input = f's3://{s3_bucket}/{prefix}/srt_train.csv'\n",
-    "test_input = f's3://{s3_bucket}/{prefix}/srt_test.csv'"
+    "train_input = f's3://{s3_bucket}/{prefix}/srt_train.csv'"
    ]
   },
   {
@@ -74,8 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sklearn_preprocessor.fit({'train': train_input,\n",
-    "                          'test': test_input})"
+    "sklearn_preprocessor.fit({'train': train_input})"
    ]
   },
   {
@@ -92,16 +88,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "transformer_output_prefix = f'sklearn-transformer-{output_timestamp_prefix}'\n",
-    "transformer_output_path = f's3://{s3_bucket}/{prefix}/{preprocessor_output_prefix}/'\n",
-    "\n",
     "# Define a SKLearn Transformer from the trained SKLearn Estimator\n",
     "transformer = sklearn_preprocessor.transformer(instance_count=1,\n",
     "                                               instance_type='ml.m4.xlarge',\n",
     "                                               assemble_with='Line',\n",
-    "                                               accept='text/csv',\n",
-    "                                               role = role,\n",
-    "                                               output_path = transformer_output_path)"
+    "                                               accept='text/csv')\n",
+    "                                               #output_path=transformer_output_path)"
    ]
   },
   {
@@ -143,6 +135,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#working with a subset of a larger dataset that won't have the 100 dimensions from the chi-2 selection, we \n",
+    "#need to manually fetch the dimensions in order to specify the feature_dim hyperparameter of the linear learner\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "train_out = f\"{preprocessed_train}/srt_train.csv.out\"\n",
+    "train_df = pd.read_csv(train_out)\n",
+    "# minus 1 to exclude the labels\n",
+    "feature_dim = train_df.shape[1] - 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "s3_ll_output_key_prefix = \"ll_training_output\"\n",
     "s3_ll_output_location = 's3://{}/{}/{}/{}'.format(s3_bucket, prefix, s3_ll_output_key_prefix, 'll_model')\n",
     "\n",
@@ -156,7 +165,7 @@
     "                                             output_path=s3_ll_output_location,\n",
     "                                             sagemaker_session=sagemaker_session)\n",
     "\n",
-    "ll_estimator.set_hyperparameters(feature_dim=100, predictor_type='binary_classifier', mini_batch_size=50)\n",
+    "ll_estimator.set_hyperparameters(feature_dim=feature_dim, predictor_type='binary_classifier', mini_batch_size=5)\n",
     "\n",
     "ll_train_data = sagemaker.session.s3_input(preprocessed_train, \n",
     "                                           distribution='FullyReplicated',\n",
@@ -179,7 +188,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can use the Pipeline Model here. This sets up a list of models in a single endpoint; in this example, we configure our pipeline model with the fitted Scikit-learn inference model and the fitted Linear Learner model."
+    "We can use the Pipeline Model here. This sets up a sequence of models in a single endpoint; in this example, we configure our pipeline model with the fitted Scikit-learn inference model and the fitted Linear Learner model."
    ]
   },
   {
@@ -190,19 +199,18 @@
    "source": [
     "from sagemaker.model import Model\n",
     "from sagemaker.pipeline import PipelineModel\n",
-    "import boto3\n",
     "from time import gmtime, strftime\n",
     "\n",
     "timestamp_prefix = strftime(\"%Y-%m-%d-%H-%M-%S\", gmtime())\n",
     "\n",
-    "scikit_learn_inferencee_model = sklearn_preprocessor.create_model()\n",
+    "scikit_learn_inference_model = sklearn_preprocessor.create_model()\n",
     "linear_learner_model = ll_estimator.create_model()\n",
     "\n",
     "model_name = 'inference-pipeline-' + timestamp_prefix\n",
     "endpoint_name = 'inference-pipeline-ep-' + timestamp_prefix\n",
     "sm_model = PipelineModel(name=model_name, \n",
     "                         role=role, \n",
-    "                         models=[scikit_learn_inferencee_model, linear_learner_model])\n",
+    "                         models=[scikit_learn_inference_model, linear_learner_model])\n",
     "\n",
     "sm_model.deploy(initial_instance_count=1, instance_type='ml.c4.xlarge', endpoint_name=endpoint_name)"
    ]
@@ -212,11 +220,11 @@
    "metadata": {},
    "source": [
     "# Make a request to the pipeline endpoint \n",
-    "Here we'll use the deployed model to get a prediction for some dummy data. \n",
+    "Here we'll use the deployed model to get predictions for our test data. \n",
     "\n",
     "Below, the `content_type` field configures the first container, while the `accept` field configures the last container.\n",
     "\n",
-    "We make our request with the payload in `text/csv` format, since that is what our script currently supports. If other formats need to be supported, this would have to be added to the `output_fn()` method in our entrypoint. Note that we set the `accpet` to `application/json`, since LinearLearner does not support `text/csv`"
+    "We make our request with the payload in `text/csv` format, since that is what our script currently supports. If other formats need to be supported, this would have to be added to the `output_fn()` method in our entrypoint. Note that we set the `accpet` to `application/json`, since LinearLearner does not support `text/csv`."
    ]
   },
   {
@@ -228,15 +236,52 @@
     "from sagemaker.predictor import json_serializer, csv_serializer, json_deserializer, RealTimePredictor\n",
     "from sagemaker.content_types import CONTENT_TYPE_CSV, CONTENT_TYPE_JSON\n",
     "\n",
-    "payload = 'This document is not compliant!'\n",
-    "y_true = 0\n",
+    "test_input = f's3://{s3_bucket}/{prefix}/srt_test.csv'\n",
+    "\n",
+    "test_df = pd.read_csv(test_input)\n",
+    "\n",
+    "def format_as_csv(text):\n",
+    "    #since we make our request with the payload in text/csv format, we need to sanitize the text first\n",
+    "    return text.replace(\",\",\"\").replace(\"\\n\",\"\")\n",
+    "\n",
+    "test_df['1'] = test_df['1'].apply(format_as_csv)\n",
+    "test_df['2'] = test_df['2'].astype(str)\n",
+    "\n",
+    "x_series = test_df['1'] + \",\" + test_df['2']\n",
+    "x_list = x_series.tolist()\n",
+    "x_test = \"\\n\".join(x_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
     "predictor = RealTimePredictor(endpoint=endpoint_name,\n",
     "                              sagemaker_session=sagemaker_session,\n",
     "                              serializer=csv_serializer,\n",
     "                              content_type=CONTENT_TYPE_CSV,\n",
     "                              accept=CONTENT_TYPE_JSON)\n",
     "\n",
-    "print(predictor.predict(payload))"
+    "predictions_str = predictor.predict(x_test)\n",
+    "predictions_dict = json.loads(predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_true = test_df['0']\n",
+    "y_pred = [i['predicted_label'] for i in predictions_dict['predictions']]\n",
+    "\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "accuracy_score(y_true, y_pred)"
    ]
   },
   {
