CLN: update docs and mv files :art:

--- a/Upload Training Data to S3.ipynb
+++ b/Upload Training Data to S3.ipynb
@@ -4,21 +4,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Read in the labeled documents\n",
+    "# Upload Training Data to s3\n",
     "This notebook assumes:\n",
-    " - You've got all of the labeled solicitaton documents within a directory named `labeled_fbo_docs`\n",
-    " - You can use the awscli\n",
-    " - You have already created an S3 bucket (our is named `srt-sm`).\n",
+    " - You've got all of the labeled solicitaton documents within a directory named `labeled_fbo_docs`.\n",
+    " - You can use the `awscli` and have configured it.\n",
+    " - You have already created an S3 bucket (our is named `srt-sm`)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Read in the training data\n",
     "\n",
-    "Below, we'll read in each document and extract the text along with the label (the label is in the file name). Although there are three lables (red, yellow and green), we're combining red and yellow as noncompliant ($0$) and treating green as compliant ($1$). This makes a binary classification challenge.\n",
+    "Below, we'll read in 50 of the nearly $1,000$ documents and extract the text along with the label (the label is in the file name). \n",
     "\n",
-    "\n",
-    ">And since we're only piloting SageMaker, will reduce our total training dataset size down to just 50 documents."
+    ">Although there are three lables (red, yellow and green), we're combining red and yellow as noncompliant ($0$) and treating green as compliant ($1$). This makes a binary classification challenge."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,13 +54,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Split into Training and Testing data\n",
+    "# Split the samples into training and test datasets\n",
     "Since our data is imbalanced, we'll use the `stratify` kwarg to split the data in a stratified fashion, using the labels array."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -87,12 +93,12 @@
    "metadata": {},
    "source": [
     "# Write the training data to csv\n",
-    "Here we'll write the training and test data to two csvs, using pandas."
+    "Here we'll write the training and test data to two csvs, using pandas to keep it simple."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,12 +136,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we'll read in the files we wrote just to make sure we do it correctly in our sagemaker script"
+    "Here we'll read in the files we wrote just to make sure we do it correctly in our sagemaker scripts."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +214,7 @@
        "4     0.0  |SOLICITATION, OFFER AND AWARD                ...   0.0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +234,7 @@
    "metadata": {},
    "source": [
     "# Push training data to S3\n",
-    "You'll need to have installed the awscli prior to this step and have configured it to use the Key ID and Secret Access Key of your AWS account. You can do that with `aws configure` as documented [here](https://docs.aws.amazon.com/cli/latest/userguide/cli-chap-configure.html#cli-quick-configuration)."
+    "Here we push the data to our s3 bucket, using a prefix that describes our project and the model we're going to use."
    ]
   },
   {
@@ -260,13 +266,6 @@
     "    url = f's3n://{bucket}/{key}'\n",
     "    print(f'Done writing to {url}')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
