FIX: typo in object name :pencil:

--- a/srt.ipynb
+++ b/srt.ipynb
@@ -267,7 +267,7 @@
     "                              accept=CONTENT_TYPE_JSON)\n",
     "\n",
     "predictions_str = predictor.predict(x_test)\n",
-    "predictions_dict = json.loads(predictions)"
+    "predictions_dict = json.loads(predictions_str)"
    ]
   },
   {
@@ -289,7 +289,7 @@
    "metadata": {},
    "source": [
     "# Delete Endpoint \n",
-    "Once we are finished with the endpoint, we clean up the resources."
+    "Once we are finished with the endpoint, we clean up the resources since the endpoint incurs costs for as long as it is alive."
    ]
   },
   {
