--- a/srt.ipynb
+++ b/srt.ipynb
@@ -54,12 +54,15 @@
     "entry_point = 'sklearn_featureizer.py'\n",
     "source_dir = 'pipeline'\n",
     "\n",
-    "sklearn_preprocessor = SKLearn(source_dir=source_dir,\n",
-    "                               entry_point=entry_point,\n",
-    "                               role=role,\n",
-    "                               train_instance_type=\"ml.c4.xlarge\",\n",
-    "                               sagemaker_session=sagemaker_session)\n",
-    "                               #output_path=preprocessor_output_path)\n",
+    "s3_ll_output_key_prefix = \"ll_training_output\"\n",
+    "preprocessor_output_path = 's3://{}/{}/{}/{}'.format(s3_bucket, prefix, s3_ll_output_key_prefix, 'll_preprocessor')\n",
+    "\n",
+    "sklearn_preprocessor = SKLearn(source_dir = source_dir,\n",
+    "                               entry_point = entry_point,\n",
+    "                               role = role,\n",
+    "                               train_instance_type = \"ml.c4.xlarge\",\n",
+    "                               sagemaker_session = sagemaker_session,\n",
+    "                               output_path = preprocessor_output_path)\n",
     "\n",
     "\n",
     "train_input = f's3://{s3_bucket}/{prefix}/srt_train.csv'"
@@ -89,11 +92,13 @@
    "outputs": [],
    "source": [
     "# Define a SKLearn Transformer from the trained SKLearn Estimator\n",
-    "transformer = sklearn_preprocessor.transformer(instance_count=1,\n",
-    "                                               instance_type='ml.m4.xlarge',\n",
-    "                                               assemble_with='Line',\n",
-    "                                               accept='text/csv')\n",
-    "                                               #output_path=transformer_output_path)"
+    "transformer_output_path = 's3://{}/{}/{}/{}'.format(s3_bucket, prefix, s3_ll_output_key_prefix, 'll_transformer')\n",
+    "\n",
+    "transformer = sklearn_preprocessor.transformer(instance_count = 1,\n",
+    "                                               instance_type = 'ml.m4.xlarge',\n",
+    "                                               assemble_with = 'Line',\n",
+    "                                               accept =' text/csv',\n",
+    "                                               output_path = transformer_output_path)"
    ]
   },
   {
@@ -136,7 +141,7 @@
    "outputs": [],
    "source": [
     "#working with a subset of a larger dataset that won't have the 100 dimensions from the chi-2 selection, we \n",
-    "#need to manually fetch the dimensions in order to specify the feature_dim hyperparameter of the linear learner\n",
+    "#need to manually fetch the dimensions in order to specify the feature_dim hyperparameter of the linear learner.\n",
     "\n",
     "import pandas as pd\n",
     "\n",
@@ -152,29 +157,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s3_ll_output_key_prefix = \"ll_training_output\"\n",
-    "s3_ll_output_location = 's3://{}/{}/{}/{}'.format(s3_bucket, prefix, s3_ll_output_key_prefix, 'll_model')\n",
+    "estimator_output_path = 's3://{}/{}/{}/{}'.format(s3_bucket, prefix, s3_ll_output_key_prefix, 'll_estimator')\n",
     "\n",
     "ll_estimator = sagemaker.estimator.Estimator(ll_image,\n",
     "                                             role, \n",
-    "                                             train_instance_count=1, \n",
-    "                                             train_instance_type='ml.m4.2xlarge',\n",
+    "                                             train_instance_count = 1, \n",
+    "                                             train_instance_type = 'ml.m4.2xlarge',\n",
     "                                             train_volume_size = 20,\n",
     "                                             train_max_run = 3600,\n",
-    "                                             input_mode= 'File',\n",
-    "                                             output_path=s3_ll_output_location,\n",
-    "                                             sagemaker_session=sagemaker_session)\n",
+    "                                             input_mode = 'File',\n",
+    "                                             output_path = estimator_output_path,\n",
+    "                                             sagemaker_session = sagemaker_session)\n",
     "\n",
-    "ll_estimator.set_hyperparameters(feature_dim=feature_dim, predictor_type='binary_classifier', mini_batch_size=5)\n",
+    "ll_estimator.set_hyperparameters(feature_dim = feature_dim, \n",
+    "                                 predictor_type = 'binary_classifier', \n",
+    "                                 mini_batch_size = 5)\n",
     "\n",
     "ll_train_data = sagemaker.session.s3_input(preprocessed_train, \n",
-    "                                           distribution='FullyReplicated',\n",
-    "                                           content_type='text/csv', \n",
-    "                                           s3_data_type='S3Prefix')\n",
+    "                                           distribution = 'FullyReplicated',\n",
+    "                                           content_type = 'text/csv', \n",
+    "                                           s3_data_type = 'S3Prefix')\n",
     "\n",
     "data_channels = {'train': ll_train_data}\n",
     "\n",
-    "ll_estimator.fit(inputs=data_channels, logs=True)"
+    "ll_estimator.fit(inputs = data_channels, logs = True)"
    ]
   },
   {
@@ -208,11 +214,14 @@
     "\n",
     "model_name = 'inference-pipeline-' + timestamp_prefix\n",
     "endpoint_name = 'inference-pipeline-ep-' + timestamp_prefix\n",
-    "sm_model = PipelineModel(name=model_name, \n",
-    "                         role=role, \n",
-    "                         models=[scikit_learn_inference_model, linear_learner_model])\n",
     "\n",
-    "sm_model.deploy(initial_instance_count=1, instance_type='ml.c4.xlarge', endpoint_name=endpoint_name)"
+    "sm_model = PipelineModel(name = model_name, \n",
+    "                         role = role, \n",
+    "                         models = [scikit_learn_inference_model, linear_learner_model])\n",
+    "\n",
+    "sm_model.deploy(initial_instance_count = 1, \n",
+    "                instance_type = 'ml.c4.xlarge',\n",
+    "                endpoint_name = endpoint_name)"
    ]
   },
   {
@@ -245,11 +254,7 @@
     "    return text.replace(\",\",\"\").replace(\"\\n\",\"\")\n",
     "\n",
     "test_df['1'] = test_df['1'].apply(format_as_csv)\n",
-    "test_df['2'] = test_df['2'].astype(str)\n",
-    "\n",
-    "x_series = test_df['1'] + \",\" + test_df['2']\n",
-    "x_list = x_series.tolist()\n",
-    "x_test = \"\\n\".join(x_list)"
+    "x_test = \",\\n\".join(test_df['1'].tolist())"
    ]
   },
   {
@@ -260,11 +265,11 @@
    "source": [
     "import json\n",
     "\n",
-    "predictor = RealTimePredictor(endpoint=endpoint_name,\n",
-    "                              sagemaker_session=sagemaker_session,\n",
-    "                              serializer=csv_serializer,\n",
-    "                              content_type=CONTENT_TYPE_CSV,\n",
-    "                              accept=CONTENT_TYPE_JSON)\n",
+    "predictor = RealTimePredictor(endpoint = endpoint_name,\n",
+    "                              sagemaker_session = sagemaker_session,\n",
+    "                              serializer = csv_serializer,\n",
+    "                              content_type = CONTENT_TYPE_CSV,\n",
+    "                              accept = CONTENT_TYPE_JSON)\n",
     "\n",
     "predictions_str = predictor.predict(x_test)\n",
     "predictions_dict = json.loads(predictions_str)"
@@ -299,7 +304,7 @@
    "outputs": [],
    "source": [
     "sm_client = sagemaker_session.boto_session.client('sagemaker')\n",
-    "sm_client.delete_endpoint(EndpointName=endpoint_name)"
+    "sm_client.delete_endpoint(EndpointName = endpoint_name)"
    ]
   }
  ],
